The tests run now. The problem was on the id's cerated by the test env.

--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -2,8 +2,10 @@
 
 one:
   title: MyString
-  content: MyText
+  content: MyString
+  user_id: 1
 
 two:
   title: MyString
-  content: MyText
+  content: MyString
+  user_id: 1
